# practice

./: CHANGELOG.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
practice/: foo.py
semantic_release/: new_file.py
tests/: test_something.py
tests/test_allure/test_a/: test_something.py
tests/test_allure/test_b/: test_something.py
tests/test_allure/test_c/: test_something.py
