[tool.poetry]
name = "practice"
version = "0.1.0"
description = "nothing to say"
authors = ["dengmingcong <mc.deng@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-semantic-release = "^7.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "semantic_release/__init__.py:__version__"