[tool.poetry]
name = "practice"
version = "0.0.2"
description = "nothing to say"
authors = ["dengmingcong <mc.deng@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-semantic-release = "^7.27.1"
pytest = "^7.1.1"
PyYAML = "^6.0"
pydantic = "^1.9.0"
allure-pytest = "^2.9.45"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "practice/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "master"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"